--- a/llms/ui/app.css
+++ b/llms/ui/app.css
@@ -963,6 +963,12 @@
   .w-64 {
     width: calc(var(--spacing) * 64);
   }
+  .w-68 {
+    width: calc(var(--spacing) * 68);
+  }
+  .w-69 {
+    width: calc(var(--spacing) * 69);
+  }
   .w-72 {
     width: calc(var(--spacing) * 72);
   }
@@ -1019,6 +1025,9 @@
   }
   .max-w-\[1600px\] {
     max-width: 1600px;
+  }
+  .max-w-\[calc\(100\%-323px\)\] {
+    max-width: calc(100% - 323px);
   }
   .max-w-full {
     max-width: 100%;
